fixed content container alligment to column no wrap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,12 +5,13 @@ html, body {
 }
 .content_container, .product_container{
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
 }
 .product_container{
     align-items: flex-start;
+    flex-flow: row wrap;
 }
 .header{
     display: flex;
